Fix font family errors on mobile

--- a/style.css
+++ b/style.css
@@ -117,11 +117,11 @@ input#open {
 .text {
     position: absolute;
     color: white;
-    font-family: brush script mt;
+    font-family: 'Great Vibes', serif;
     top: 260px;
     width: 200px;
     text-align: center;
-    font-size: 22px;
+    font-size: 23px;
 }
 
 .text:before {
@@ -251,7 +251,7 @@ input#open {
     position: absolute;
     color: #e9e9e9;
     font-size: 30px;
-    font-family: brush script mt;
+    font-family: 'Great vibes', serif;
     line-height: 25px;
     text-align: center;
     top: 25px;
@@ -262,7 +262,7 @@ input#open {
     position: absolute;
     width: 150px;
     text-align: center;
-    font-family: brush script mt;
+    font-family: 'Sevillana', serif;
     line-height: 15px;
     font-size: 20px;
     color: #333;
